[package]
name = "packet_radar"
version = "0.1.0"
authors = ["Joshua Koo <zz85nus@gmail.com>", "Yang Bin Kwok <yangbin@fragnetics.com>"]
edition = "2018"

[dependencies]
websocket = "0.22"
tokio="*"
futures="*"
pcap="*"
pnet="*"
dns-lookup ="*"
serde_json = "1"
dipstick = "0.7.10"
serde = { version = "1.0", features = ["derive"] }
zerocopy = "0.2.8"
lazy_static = "1.3.0"
tls-parser = "0.9.0"
rand = "0.7.0"
pnet_macros_support = "0.22.0"
crossbeam = "0.7.2"
sysinfo = "0.9.5"
maxminddb = "0.13.0"
itertools = "0.8.0"
md5 = "0.6.1"
libproc = "0.7.1"
libc = "0.2.65"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.8"
netstat2 = "0.8.1"
pretty-bytes = "0.2.2"
hdrhistogram = "7.2.0"

bytes = "0.6"
hex = "0.3"