[package]
name = "packet_radar"
version = "0.1.0"
authors = ["Joshua Koo <zz85nus@gmail.com>", "Yang Bin Kwok <yangbin@fragnetics.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "packet_radar"
path = "src/main.rs"

[[bin]]
name = "ja4dump"
path = "src/bin/ja4dump.rs"

[[bin]]
name = "ja4top"
path = "src/bin/ja4top.rs"

[[bin]]
name = "ja4_df_processes"
path = "src/bin/ja4_df_processes.rs"

[dependencies]
websocket = "0.27.1"
tokio="*"
futures="*"
pcap="*"
pnet="*"
dns-lookup ="*"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
zerocopy = "0.6"
lazy_static = "1.3.0"
tls-parser = "0.11.0"
rand = "0.8.5"
pnet_macros_support = "0.35.0"
crossbeam = "0.7"
sysinfo = "0.30.12"
maxminddb = "0.24.0"
itertools = "0.13.0"
md5 = "0.7.0"
libproc = "0.14.8"
libc = "0.2.155"
enum-primitive-derive = "0.3.0"
num-traits = "0.2.8"
netstat2 = "0.9.1"
pretty-bytes = "0.2.2"
hdrhistogram = "7.2.0"

bytes = "1.6.0"
hex = "0.4.3"
sha2 = "0.10.8"
clap = { version = "4.5.4", features = ["derive"] }
dashmap = "5.5.3"
quick_cache = "0.5.1"
pcap-parser = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
crossterm = "0.27.0"
polars = { version = "0.40.0", features = ["lazy"], optional = true }

s2n-quic-core = "0.37.0"
s2n-codec = "0.37.0"
s2n-quic-crypto = "0.37.0"


[features]
df = ["dep:polars"]
# default = ["df"]
